Tar i burk TokenUtil fra felles og diverse andre utils (#839)
* Tar i burk TokenUtil fra felles og diverse andre utils

* Bumper setup-java v3, docker-login v2, token-support 2.0.20, springdoc 1.6.8 og logstash 7.2